--- a/index.html
+++ b/index.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple HTML Page</title>
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Styling for the pre-loader -->
+    <style> 
+    @keyframes move-xp {
+      0% {
+        transform: translateX(-100%);
+      }
+      100% {
+        transform: translateX(600%);
+      }
+    }
+
+    .loader-track {
+      animation: move-xp 3s linear infinite;
+    }
+
+    .bar-rect {
+      width: 16px;
+      height: 100%;
+      background-color: skyblue;
+      margin-right: 2px;
+
+    }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body class="bg-black bg-[url(/bg.jpg)] bg-cover">
+  <body class="bg-black bg-[url(/bg.jpg)] bg-[auto_650px] sm:bg-[auto_1300px]">
     <div id="container" 
-    class="container text-sm font-mono mx-5">
-    <div class="column flex">
+    class="container text-sm font-mono px-4">
+    <div class="column flex gap-4">
       <div
-        class="icon group hover:cursor-pointer w-25 h-25 relative flex items-center justify-center"
+        class="icon group hover:cursor-pointer w-20 h-20 sm:w-25 sm:h-25 relative flex items-center justify-center"
       >
         <img
           src="icon1.png"
@@ -20,13 +42,13 @@
           class="group-hover:brightness-50 transition"
         />
         <div
-          class="absolute bottom-0 text-black px-1 bg-white bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white text-center transition"
+          class="absolute bottom-0 text-white px-1 bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white sm:text-[14px] text-[10px] text-center transition"
         >
           About_MLSC
         </div>
       </div>
        <div
-        class="icon group hover:cursor-pointer w-25 h-25 relative flex items-center justify-center"
+        class="icon group hover:cursor-pointer w-20 h-20 sm:w-25 sm:h-25 relative flex items-center justify-center"
       >
         <img
           src="register.png"
@@ -34,7 +56,7 @@
           class="group-hover:brightness-50 transition"
         />
         <div
-          class="absolute bottom-0 text-black px-1 bg-white bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white text-center transition"
+          class="absolute bottom-0 text-white px-1 bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white sm:text-[14px] text-[10px] text-center transition"
         >
           Registrations
         </div>
@@ -42,43 +64,43 @@
     </div>
       
       <div
-        class="icon group hover:cursor-pointer w-25 h-25 relative flex items-center justify-center"
+        class="icon group hover:cursor-pointer w-20 h-20 sm:w-25 sm:h-25 relative flex items-center justify-center"
       >
         <img
-          src="icon1.png"
-          alt="Icon 1"
+          src="users.png"
+          alt="Users"
           class="group-hover:brightness-50 transition"
         />
         <div
-          class="absolute bottom-0 text-black px-1 bg-white bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white text-center transition"
+          class="absolute bottom-0 text-white px-1 bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white sm:text-[14px] text-[10px] text-center transition"
         >
           Meet_the_Team
         </div>
         </div>
         <div
-        class="icon group hover:cursor-pointer w-25 h-25 relative flex items-center justify-center"
+        class="icon group hover:cursor-pointer w-20 h-20 sm:w-25 sm:h-25 relative flex items-center justify-center"
       >
         <img
-          src="icon1.png"
-          alt="Icon 1"
+          src="tree.png"
+          alt="Timeline"
           class="group-hover:brightness-50 transition"
         />
         <div
-          class="absolute bottom-0 text-black px-1 bg-white bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white text-center transition"
+          class="absolute bottom-0 text-white px-1 bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white sm:text-[14px] text-[10px] text-center transition"
         >
           Sacred_Timeline
         </div>
         </div>
          <div
-        class="icon group hover:cursor-pointer w-25 h-25 relative flex items-center justify-center"
+        class="icon group hover:cursor-pointer w-20 h-20 sm:w-25 sm:h-25 relative flex items-center justify-center"
       >
         <img
-          src="icon1.png"
-          alt="Icon 1"
+          src="globe.png"
+          alt="Globe"
           class="group-hover:brightness-50 transition"
         />
         <div
-          class="absolute bottom-0 text-black px-1 bg-white bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white text-center transition"
+          class="absolute bottom-0 text-white px-1 bg-opacity-15 group-hover:bg-blue-800 group-hover:text-white sm:text-[14px] text-[10px] text-center transition"
         >
           The_Lore
         </div>
@@ -94,7 +116,7 @@
       >
         <img src="logo.png" />
       </button>
-      <div class="copyright mx-2 my-auto ml-40 font-mono hover:cursor-default">&copy; MLSC DB, 2025</div>
+      <div class="copyright mx-2 my-auto ml-40 font-mono hover:cursor-default sm:block hidden">&copy; MLSC DB, 2025</div>
       <div class="px-4 my-auto font-mono hover:cursor-default" id="date-time"></div>
     </div>
     <div id="start-menu"
@@ -158,174 +180,62 @@
     <div id="popup"
       class="popup hidden w-full h-full absolute inset-0 bg-slate-600 border-2 border-slate-100 transition-all duration-300 scale-95 opacity-0"
       data-state="fullscreen"
-    >
+      style="left:0; top:0;"
+        >
       <div
-        class="header flex justify-between items-center px-0.5 py-0.5 bg-slate-100 hover:cursor-move"
+      class="header flex justify-between items-center px-0.5 py-0.5 bg-slate-100 hover:cursor-move"
+      id="popup-header"
+      style="user-select:none;"
       >
-        <div></div>
-        <div id="popup-title" class="ml-6"></div>
-        <div class="buttons flex gap-1 mb-0.5">
-          <button
-            class="h-full w-6 hover:cursor-pointer bg-slate-400 hover:bg-slate-700 rounded border-1 border-slate-400"
-            id="popup-min"
-            title="Toggle size"
-          >
-            &#9634;
-          </button>
-          <button
-            class="h-full w-6 hover:cursor-pointer bg-slate-400 hover:bg-slate-700 rounded border-1 border-slate-400"
-            id="popup-close"
-          >
-            X
-          </button>
+      <div></div>
+      <div id="popup-title" class="ml-6"></div>
+      <div class="buttons flex gap-1 mb-0.5">
+        <button
+        class="h-full w-6 hover:cursor-pointer bg-slate-400 hover:bg-slate-700 rounded border-1 border-slate-400"
+        id="popup-min"
+        title="Toggle size"
+        >
+        &#9634;
+        </button>
+        <button
+        class="h-full w-6 hover:cursor-pointer bg-slate-400 hover:bg-slate-700 rounded border-1 border-slate-400"
+        id="popup-close"
+        >
+        X
+        </button>
+      </div>
+      </div>
+      <div id="popup-content" class="w-full h-[95%]">
+      <!-- Content will be loaded here dynamically -->
+      </div>
         </div>
-      </div>
-      <div id="popup-content">
-        
-      </div>
-    </div>
     <div id="notification"
-     class="notification absolute right-10 bottom-20 bg-yellow-50 rounded border-2 border-yellow-50 w-[400px] h-[300px] opacity-100 scale-100 transition" id="notification">
+     class="notification absolute right-5 bottom-15 bg-yellow-50 rounded border-2 border-yellow-50 w-[350px] h-[200px] sm:w-[400px] sm:h-[300px] opacity-100 scale-100 transition" id="notification">
       <div class="notif-header w-full h-7 bg-blue-800 flex justify-between items-center">
-        <div class="mx-2 text-white font-semibold font-mono">New Notification!</div>
+        <div class="mx-2 text-white font-semibold font-mono hover:cursor-default">New Notification!</div>
         <button class="notif-close w-5 bg-gray-400 mx-1 border-1 hover:cursor-pointer hover:bg-gray-500 drop-shadow-sm font-bold text-sm"> X </button>
       </div>
-      <div class="notif-content flex justify-between items-center w-full h-28 mt-13">
+      <div class="notif-content flex justify-between items-center w-full h-28 mt-3 sm:mt-15">
         <div>
-          <img src="register.png" alt="Register" class="w-30 h-30">
+          <img src="ibutton.png" alt="i_button" class="w-30 h-30">
         </div>
-        <div class="notif-message flex justify-between items-center mx-2 h-full w-64 font-mono text-sm font-semibold">
+        <div class="notif-message flex justify-between items-center mx-2 sm:h-full w-64 font-mono text-[10px] sm:text-sm hover:cursor-default">
           The registerations for MLSC have begun! Click on the button below or the 'Registrations' icon on your desktop to be a part of our society.
         </div>
       </div>
-      <button class="register-button w-30 h-10 bg-gray-400 mt-5 ml-35 hover:cursor-pointer hover:bg-gray-500 font-mono drop-shadow-md border-2">Register</button>
+      <button class="register-button w-30 h-8 sm:my-7 bg-gray-400 ml-30 sm:ml-35 text-sm hover:cursor-pointer hover:bg-gray-500 font-mono drop-shadow-md border-2">Register</button>
     </div>
-    <script> // Toggle popup fullscreen/partial
-      document.getElementById("popup-min").addEventListener("click", function () {
-        const popup = document.getElementById("popup");
-        if (popup.dataset.state === "fullscreen") {
-          popup.classList.remove("w-full", "h-full", "inset-0");
-          popup.classList.add("w-[600px]", "h-[400px]");
-          popup.style.left = "calc(50% - 200px)";
-          popup.style.top = "calc(50% - 150px)";
-          popup.style.position = "fixed";
-          popup.dataset.state = "partial";
-        } else {
-          popup.classList.add("w-full", "h-full", "inset-0");
-          popup.classList.remove("w-[600px]", "h-[400px]");
-          popup.style.left = "";
-          popup.style.top = "";
-          popup.style.position = "absolute";
-          popup.dataset.state = "fullscreen";
-        }
-      });
-    </script>
-    <script> // Pop up opener and closer
-      const openWindow = document.querySelectorAll(".icon")
-      openWindow.forEach(div => {
-        div.addEventListener("click", function () {
-        const popup = document.getElementById("popup");
-        popup.classList.remove("hidden", "opacity-0", "scale-95");
-        setTimeout(() => {
-          popup.classList.add("opacity-100", "scale-100");
-        }, 10);
-      });
-      }) 
-
-      document.getElementById("popup-close").addEventListener("click", function () {
-          const popup = document.getElementById("popup");
-          popup.classList.remove("opacity-100", "scale-100");
-          popup.classList.add("opacity-0", "scale-95");
-          setTimeout(() => {
-            popup.classList.add("hidden");
-          }, 300);
-        });
-    </script>
-    <script> // Function for right click
-      document.addEventListener("contextmenu", function (e) {
-        e.preventDefault();
-        document.getElementById("start-menu").classList.add("hidden");
-        const menu = document.getElementById("context-menu");
-        menu.classList.remove("hidden", "scale-90");
-        menu.style.left = e.clientX + "px";
-        menu.style.top = e.clientY + "px";
-        setTimeout(() => {
-          menu.classList.add("scale-100");
-        }, 10);
-      });
-
-      document.addEventListener("click", function (e) {
-        const contextMenu = document.getElementById("context-menu");
-        if (!contextMenu.contains(e.target)) {
-          contextMenu.classList.add("hidden", "scale-95");
-          contextMenu.classList.remove("scale-100");
-        }
-      });
-
-      window.addEventListener("resize", () => {
-        const contextMenu = document.getElementById("context-menu");
-        contextMenu.classList.add("hidden", "scale-95");
-        contextMenu.classList.remove("scale-100");
-      });
-      window.addEventListener("scroll", () => {
-        const contextMenu = document.getElementById("context-menu");
-        contextMenu.classList.add("hidden", "scale-95");
-        contextMenu.classList.remove("scale-100");
-      });
-
-      document.addEventListener("click", function (e) {
-        const startMenu = document.getElementById("start-menu");
-        const startButton = document.querySelector(".start-button");
-        if (!startMenu.contains(e.target) && !startButton.contains(e.target)) {
-          startMenu.classList.add("hidden");
-        }
-      });
-    </script>
-    <script> // Function for clock
-      function updateDateTime() {
-        const now = new Date();
-        const options = {
-          year: "numeric",
-          month: "short",
-          day: "numeric",
-          hour: "2-digit",
-          minute: "2-digit",
-          second: "2-digit",
-          hour12: false,
-        };
-        document.getElementById("date-time").textContent = now.toLocaleString(
-          undefined,
-          options
-        );
-      }
-      setInterval(updateDateTime, 1000);
-      updateDateTime();
-    </script>
-    <script> // Refreshing the page
-      const refreshDivs = document.querySelectorAll(".refresh")
-      refreshDivs.forEach(div => {
-        div.addEventListener('click', () => {
-          location.reload();
-        })
-      });
-    </script>
-    <script> // Script for notification-register-button
-      document.querySelector(".register-button").addEventListener("click", function () {
-      const popup = document.getElementById("popup");
-      popup.classList.remove("hidden", "opacity-0", "scale-95");
-        setTimeout(() => {
-          popup.classList.add("opacity-100", "scale-100");
-        }, 10);
-      const notification = document.getElementById("notification");
-      notification.classList.add("hidden");
-      })
-    </script>
-    <script> // To close the notification
-      document.querySelector(".notif-close").addEventListener("click", function () {
-        const notif = document.getElementById("notification");
-        notif.classList.remove("opacity-100", "scale-100")
-        notif.classList.add("opacity-0", "scale-95");
-      });
-    </script>
+    <div id="pre-loader"
+     class="fixed inset-0 bg-black flex justify-center items-center z-50 opacity-100 transition flex-col" style="cursor: url('/loading.cur') 16 16, auto;">
+     <div class="header text-white text-lg font-mono flex justify-center items-center">Loading the world of MLSC</div>
+      <div class="relative w-[300px] h-[16px] bg-black overflow-hidden rounded border-2 border-white mx-auto mt-10">
+      <div class="absolute top-0 left-0 h-full flex loader-track">
+        <div class="bar-rect border-white"></div>
+        <div class="bar-rect border-white"></div>
+        <div class="bar-rect border-white"></div>
+      </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
