--- a/register.html
+++ b/register.html
@@ -1,53 +1,158 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<link rel="stylesheet" href="register.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Recruitment Form</title>
+
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Press+Start+2P&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Pixelify Sans', sans-serif;
+      background-color: black;
+    }
+
+    .flicker {
+      animation: flicker 6s infinite;
+    }
+
+    @keyframes flicker {
+      0%, 50%,100% {
+        opacity: 1;
+      }
+      25%, 75% {
+        opacity: 0.8;
+      }
+    }
+
+    .scanline::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(1, 1, 1, 0.6) 0px,
+        rgba(16, 16, 16, 0.7) 2px,
+        transparent 2px,
+        transparent 4px
+      );
+      pointer-events: none;
+      z-index: 1;
+      animation: scanlineHorizontal 0.4s linear infinite;
+    }
+
+    @keyframes scanlineHorizontal {
+      0% {
+        background-position: 0 0;
+      }
+      100% {
+        background-position: 0 4px;
+      }
+    }
+
+    .vignette::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(
+        ellipse at center,
+        rgba(255, 255, 255, 0.06) 0%,
+        rgba(0, 0, 0, 0.6) 100%
+      );
+      mix-blend-mode: screen;
+      pointer-events: none;
+      z-index: 2;
+      filter: blur(0.5px);
+    }
+
+    .font-pixel {
+      font-family: 'Pixelify Sans', sans-serif;
+    }
+
+    .font-retro {
+      font-family: 'Press Start 2P', cursive;
+    }
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
+  </style>
 </head>
-<div class="form in-popup">
-  <div class="element">RECRUITMENT FORM</div>
-  <div class="element1">
-    <input type="text" placeholder="Enter your name" required /><br><br>
-    <input type="email" placeholder="Enter your E-MAIL" required /><br><br>
-    <input type="tel" placeholder="Phone Number" required /><br><br>
+<body class="relative overflow-hidden">
 
-    <select required>
-      <option value="" disabled selected>Year of Study</option>
-      <option>First Year</option>
-      <option>Second Year</option>
-    </select><br><br>
-
-    <select required>
-      <option value="" disabled selected>Domain Preference 1</option>
-      <option>Tech</option>
-      <option>Design</option>
-      <option>Management</option>
-    </select><br><br>
-
-    <select required>
-      <option value="" disabled selected>Domain Preference 2</option>
-      <option>Tech</option>
-      <option>Design</option>
-      <option>Management</option>
-    </select><br><br>
-
-    <select required>
-      <option value="" disabled selected>Domain Preference 3</option>
-      <option>Tech</option>
-      <option>Design</option>
-      <option>Management</option>
-    </select><br><br>
-
-    <input type="text" placeholder="Projects" /><br><br>
-    <input type="text" placeholder="Why do you want to join MLSC?" required />
+  <!-- 🎬 Background Layer (with flicker + scanline + vignette) -->
+  <div class="absolute inset-0 z-0 flicker scanline vignette">
+    <img src="./assets/registration/images/bg.jpg" alt="Background" class="w-full h-full object-cover" />
   </div>
 
-  <button type="submit">
-    <img src="./assets/registration/images/button.png" height="50" width="100" class="image" />
-  </button>
-  <div class="text">SUBMIT</div>
-</div>
+  <!-- 📝 Foreground Form Content -->
+  <div class="relative z-10 flex items-center justify-center h-155 bg-black/20">
+    <div class="w-full max-w-md p-6 rounded-lg text-white shadow-lg">
+      <div class="text-center text-lg md:text-xl font-retro drop-shadow-xl mb-6">
+        RECRUITMENT FORM
+      </div>
 
-<script>
-  // This is optional, but good for safety if you ever reuse this file elsewhere
-  if (window.self !== window.top) {
-    document.querySelector('.form')?.classList.add('in-popup');
-  }
-</script>
+      <form class="space-y-4 text-center">
+        <input type="text" placeholder="Enter your name" required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel" />
+
+        <input type="email" placeholder="Enter your E-MAIL" required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel" />
+
+        <input type="tel" placeholder="Phone Number" required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel" />
+
+        <select required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel">
+          <option value="" disabled selected>Year of Study</option>
+          <option>First Year</option>
+          <option>Second Year</option>
+        </select>
+
+        <select required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel">
+          <option value="" disabled selected>Domain Preference 1</option>
+          <option>Tech</option>
+          <option>Design</option>
+          <option>Management</option>
+        </select>
+
+        <select required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel">
+          <option value="" disabled selected>Domain Preference 2</option>
+          <option>Tech</option>
+          <option>Design</option>
+          <option>Management</option>
+        </select>
+
+        <select required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel">
+          <option value="" disabled selected>Domain Preference 3</option>
+          <option>Tech</option>
+          <option>Design</option>
+          <option>Management</option>
+        </select>
+
+        <input type="text" placeholder="Projects"
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel" />
+
+        <input type="text" placeholder="Why do you want to join MLSC?" required
+          class="w-[257px] h-[30px] px-2 rounded bg-red-950 border-2 border-black text-white text-sm font-pixel" />
+
+        <button type="submit" class="mt-4 left-[35%] relative flex items-center justify-center">
+          <img src="./assets/registration/images/button.png" alt="Submit" width="100" height="50"
+            class="hover:brightness-110 transform hover:scale-105 transition duration-200 cursor-pointer"/>
+          <span class="absolute text-white font-retro text-[10px] pointer-events-none">SUBMIT</span>
+        </button>
+      </form>
+    </div>
+  </div>
+</body>
+</html>
