--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
           transform: translateX(600%);
         }
       }
+      .active-task {
+        background: linear-gradient(to bottom, #316ac5, #003399) !important;
+        color: white !important;
+        border-color: #1d4ed8 !important;
+      }
 
+      .active-task img {
+        filter: brightness(1.2) saturate(1.2);
+      }
       .loader-track {
         animation: move-xp 3s linear infinite;
+      }
+      body {
+        font-family: Tahoma, Verdana, sans-serif;
       }
 
       .bar-rect {
@@ -24,6 +35,63 @@
         height: 100%;
         background-color: skyblue;
         margin-right: 2px;
+      }
+      .xp-btn {
+        font-family: Tahoma, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        padding: 2px 8px;
+        color: black;
+        background: linear-gradient(to bottom, #dbeeff, #7fbfff);
+        border: 1px solid #3a6ea5;
+        border-radius: 4px;
+        box-shadow: inset 0 0 0 1px #ffffffa1, inset 0 1px 0 0 #ffffffa1;
+        white-space: nowrap;
+        margin-right: 2px;
+        transition: background 0.2s ease-in-out;
+      }
+
+      .xp-btn:hover {
+        background: linear-gradient(to bottom, #c5e3ff, #66b2ff);
+      }
+
+      .xp-btn:active,
+      .xp-btn.active {
+        background: linear-gradient(to bottom, #7fbfff, #dbeeff);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4);
+      }
+      .xp-taskbar-btn {
+        font-family: Tahoma, sans-serif;
+        box-shadow: inset 1px 1px white, inset -1px -1px #888;
+      }
+      .taskbar-btn {
+        border-width: 1px;
+        border-color: #808080;
+        background: linear-gradient(to bottom, #d4d0c8, #b5b5b5);
+        box-shadow: inset 1px 1px #fff, inset -1px -1px #808080;
+      }
+
+      .taskbar-btn:hover {
+        box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+      }
+
+      .taskbar-btn.active-task {
+        background: linear-gradient(to bottom, #c0c0c0, #a0a0a0);
+        box-shadow: inset 1px 1px #ffffff, inset -1px -1px #808080;
+      }
+      .image-render-pixelated {
+        image-rendering: pixelated;
+      }
+      html,
+      body.lock-scroll {
+        overflow: clip !important;
+        height: 100vh !important;
+      }
+
+      html,
+      body {
+        max-height: 100vh;
+        overflow-x: hidden;
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -106,7 +174,7 @@
     </div>
     <div
       id="footer"
-      class="footer z-1 w-screen h-10 absolute bottom-0 bg-yellow-50 flex items-center justify-between px-2"
+      class="footer w-full h-12 bg-gradient-to-b from-[#d6dfea] to-[#b8cce4] border-t-2 border-[#5c95ca] shadow-inner z-1 absolute bottom-0 bg-yellow-50 flex items-center justify-between px-2"
     >
       <!-- Left side: Start button and taskbar apps -->
       <div class="flex items-center gap-1">
@@ -118,7 +186,7 @@
         </button>
         <div
           id="taskbar-apps"
-          class="flex items-center gap-1 overflow-x-auto max-w-[60vw] pr-2"
+          class="flex items-center gap-1 overflow-x-auto max-w-[60vw] pr-2 h-full"
         ></div>
       </div>
 
@@ -191,9 +259,9 @@
         Secret Menu
       </div>
     </div>
-    
-     <!-- //popup -->
-    
+
+    <!-- //popup -->
+
     <div
       id="notification"
       class="notification absolute right-5 bottom-15 bg-yellow-50 rounded border-2 border-yellow-50 w-[350px] h-[200px] sm:w-[400px] sm:h-[300px] opacity-100 scale-100 transition"
