--- a/register.html
+++ b/register.html
@@ -96,12 +96,12 @@
   </div>
 
   <!-- 📝 Foreground Form (z-10) -->
-  <div class="relative z-10 flex justify-center items-center min-h-screen bg-black/50 p-4">
-    <div class="w-full max-w-md bg-black/80 backdrop-blur-sm p-6 rounded-md shadow-lg text-white overflow-y-auto max-h-[90vh]">
+  <div class="relative z-10 flex justify-center items-center min-h-[100%] p-4">
+    <div class="w-full max-w-md rounded-md shadow-lg text-white overflow-y-auto max-h-[90vh]">
 
-      <h2 class="text-center font-retro mb-6">RECRUITMENT FORM</h2>
+      <h2 class="text-center font-retro text-[30px] mb-10">RECRUITMENT FORM</h2>
 
-      <form class="flex flex-col gap-4">
+      <form class="flex flex-col gap-5">
         <input type="text" placeholder="Enter your name" required class="bg-red-950 border border-black px-2 py-1 text-sm" />
         <input type="email" placeholder="Enter your E-MAIL" required class="bg-red-950 border border-black px-2 py-1 text-sm" />
         <input type="tel" placeholder="Phone Number" required class="bg-red-950 border border-black px-2 py-1 text-sm" />
