--- a/index.html
+++ b/index.html
@@ -183,12 +183,10 @@
         <div class="copyright font-mono hidden sm:block hover:cursor-default">
           &copy; MLSC DB, 2025
         </div>
-        <div class="font-mono hover:cursor-default" id="date-time"></div>
+        <div class="font-mono hover:cursor-default text-sm" id="date-time"></div>
       </div>
     </div>
-
-    <div
-      id="start-menu"
+    <div id="start-menu"
       class="start-menu w-[300px] h-[204px] font-mono hidden bg-gray-500 absolute bottom-10 left-0 border-2 border-slate-50 mx-0.5 my-1 z-50 drop-shadow-lg"
     >
       <div
@@ -217,8 +215,7 @@
         Secret Menu
       </div>
     </div>
-    <div
-      id="context-menu"
+    <div id="context-menu"
       class="rounded shadow-lg w-[300px] h-[204px] font-mono hidden bg-gray-500 absolute bottom-10 left-0 border-2 border-slate-50 mx-0.5 my-1 z-50 scale-90 drop-shadow-lg"
     >
       <div
